# testops_example

./: .gitignore  pyproject.toml  requirements.txt
test_ops/: test_ops.py  test_ops_example.py
